--- a/_toc.yml
+++ b/_toc.yml
@@ -19,7 +19,11 @@ chapters:
     title: "Nock: The Lambda Approach"
   - file: content/understanding/assembly-language-approach
     title: "Nock: The Assembly Language Approach"
-    
+  - file: content/understanding/cellular-automaton-approach
+    title: "Nock: The Cellular Automaton Approach"
+  - file: content/understanding/alchemy-approach
+    title: "Nock: The Alchemy Approach"
+
 - file: content/examples/index
   title: Code Examples
   sections:
