--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,23 @@ jobs:
         pip install -r requirements.txt
         pip install jupyter-book
 
+    - name: Install Pinochle and Nock Kernel
+      run: |
+        # Install pinochle library
+        pip install git+https://github.com/sigilante/pinochle.git#subdirectory=packages/pinochle
+        
+        # Install nock kernel package
+        pip install git+https://github.com/sigilante/pinochle.git#subdirectory=packages/nock_kernel
+
+    - name: Install Nock Kernel Spec
+      run: |
+        # Get the kernelspec path and install it
+        SPEC_DIR=$(python -c "import nock_kernel, os; print(os.path.join(os.path.dirname(nock_kernel.__file__), 'kernelspec'))")
+        jupyter kernelspec install $SPEC_DIR --user --name nock
+        
+        # Verify installation
+        jupyter kernelspec list
+
     - name: Build the book
       run: |
         jupyter-book build .
