--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Jupyter Book
 
 on:
   push:
-    branches: [ master ]  # Changed from 'main' to 'master'
+    branches: [ master ]
 
 jobs:
   deploy:
@@ -28,10 +28,10 @@ jobs:
         # Install nock kernel package
         pip install git+https://github.com/sigilante/pinochle.git#subdirectory=packages/nock_kernel
 
-      - name: Install Nock Kernel Spec
-        run: |
-          # Install the kernelspec from inside the package
-          python -c "
+    - name: Install Nock Kernel Spec
+      run: |
+        # Install the kernelspec from inside the package
+        python -c "
 import nock_kernel
 import os
 import subprocess
@@ -40,8 +40,8 @@ spec_dir = os.path.join(os.path.dirname(nock_kernel.__file__), 'kernelspec')
 print(f'Installing from: {spec_dir}')
 subprocess.run(['jupyter', 'kernelspec', 'install', spec_dir, '--user', '--name', 'nock'], check=True)
 "
-          # Verify installation
-          jupyter kernelspec list
+        # Verify installation
+        jupyter kernelspec list
 
     - name: Build the book
       run: |
@@ -50,9 +50,9 @@ subprocess.run(['jupyter', 'kernelspec', 'install', spec_dir, '--user', '--name'
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/master'  # Changed from 'main' to 'master'
+      if: github.ref == 'refs/heads/master'
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_build/html
-        publish_branch: gh-pages  # Deploy to gh-pages instead of master
+        publish_branch: gh-pages
         cname: nock.is
