--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,20 +28,43 @@ jobs:
         # Install nock kernel package
         pip install git+https://github.com/sigilante/pinochle.git#subdirectory=packages/nock_kernel
 
+    - name: Debug - Check nock_kernel installation
+          run: |
+            echo "=== Checking nock_kernel installation ==="
+            pip show nock-kernel
+            
+            echo -e "\n=== Python path ==="
+            python -c "import sys; print('\n'.join(sys.path))"
+            
+            echo -e "\n=== nock_kernel location ==="
+            python -c "import nock_kernel; print(nock_kernel.__file__)"
+            
+            echo -e "\n=== Contents of nock_kernel package ==="
+            python -c "import nock_kernel, os; import glob; print('\n'.join(glob.glob(os.path.join(os.path.dirname(nock_kernel.__file__), '**'), recursive=True)))"
+    
     - name: Install Nock Kernel Spec
-      run: |
-        # Install the kernelspec from inside the package
-        python -c "
-        import nock_kernel
-        import os
-        import subprocess
-
-        spec_dir = os.path.join(os.path.dirname(nock_kernel.__file__), 'kernelspec')
-        print(f'Installing from: {spec_dir}')
-        subprocess.run(['jupyter', 'kernelspec', 'install', spec_dir, '--user', '--name', 'nock'], check=True)
-        "
-        # Verify installation
-        jupyter kernelspec list
+          run: |
+            # Find where the package is actually installed
+            INSTALLED_PATH=$(python -c "import nock_kernel; print(nock_kernel.__file__)")
+            echo "nock_kernel installed at: $INSTALLED_PATH"
+            
+            # Get the directory
+            INSTALLED_DIR=$(dirname "$INSTALLED_PATH")
+            echo "Package directory: $INSTALLED_DIR"
+            
+            # Check if kernelspec exists
+            SPEC_DIR="$INSTALLED_DIR/kernelspec"
+            echo "Looking for kernelspec at: $SPEC_DIR"
+            ls -la "$SPEC_DIR" || echo "kernelspec not found!"
+            
+            # Install kernel spec
+            if [ -d "$SPEC_DIR" ]; then
+              jupyter kernelspec install "$SPEC_DIR" --user --name nock
+              jupyter kernelspec list
+            else
+              echo "ERROR: kernelspec directory not found in installed package"
+              exit 1
+            fi
 
     - name: Build the book
       run: |
