--- a/_toc.yml
+++ b/_toc.yml
@@ -72,4 +72,4 @@ chapters:
   - file: content/history/nock-13k
     title: Nock 13K
   - file: content/history/nock-u
-    title: U: A Small Model
+    title: "U: A Small Model"
