--- a/_toc.yml
+++ b/_toc.yml
@@ -71,5 +71,5 @@ chapters:
     title: Nock 12K
   - file: content/history/nock-13k
     title: Nock 13K
-  - file: content/history/nock-u
+  - file: content/history/u-model
     title: "U: A Small Model"
