--- a/_toc.yml
+++ b/_toc.yml
@@ -53,23 +53,23 @@ chapters:
   sections:
   - url: https://urbitsystems.tech/article/v02-i01/a-documentary-history-of-the-nock-combinator-calculus
     title: History of Nock
-  - file: content/history/nock-5k
+  - file: content/history/nock-5k.md
     title: Nock 5K
-  - file: content/history/nock-6k
+  - file: content/history/nock-6k.md
     title: Nock 6K
-  - file: content/history/nock-7k
+  - file: content/history/nock-7k.md
     title: Nock 7K
-  - file: content/history/nock-8k
+  - file: content/history/nock-8k.md
     title: Nock 8K
-  - file: content/history/nock-9k
+  - file: content/history/nock-9k.md
     title: Nock 9K
-  - file: content/history/nock-10k
+  - file: content/history/nock-10k.md
     title: Nock 10K
-  - file: content/history/nock-11k
+  - file: content/history/nock-11k.md
     title: Nock 11K
-  - file: content/history/nock-12k
+  - file: content/history/nock-12k.md
     title: Nock 12K
-  - file: content/history/nock-13k
+  - file: content/history/nock-13k.md
     title: Nock 13K
   - file: content/history/u-model
     title: "U: A Small Model"
