--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ repository:
 
 # Add GitHub buttons to your book
 html:
-  use_issues_button: true
-  use_repository_button: true
-  use_edit_page_button: true
+  # use_issues_button: true
+  # use_repository_button: true
+  # use_edit_page_button: true
   home_page_in_navbar: false
   favicon: "_static/favicon.ico"
   extra_footer: |
