--- a/environment.yml
+++ b/environment.yml
@@ -6,5 +6,6 @@ dependencies:
   - pip
   - pip:
     - jupyter-book
+    - sphinxcontrib-mermaid
     - git+https://github.com/sigilante/pinochle.git#subdirectory=packages/pinochle
     - git+https://github.com/sigilante/pinochle.git#subdirectory=packages/nock_kernel
