--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,6 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
-        pip install jupyter-book
-        pip install sphinxcontrib-mermaid
 
     - name: Install Pinochle and Nock Kernel
       run: |
@@ -69,7 +67,13 @@ jobs:
 
     - name: Build the book
       run: |
+        # Clean any previous build artifacts
+        rm -rf _build
+
+        # Build the book
         jupyter-book build .
+
+        # Copy nojekyll file
         cp .nojekyll _build/html/
 
     - name: Deploy to GitHub Pages
