--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,16 +95,8 @@ jobs:
         # Verify jupyter-book installation
         jupyter-book --version
 
-        # List all files to ensure nothing is missing
-        echo "Files in current directory:"
-        ls -la
-
-        # Build the book with verbose output and explicit builder
-        jupyter-book build . --builder html --verbose 2>&1 | tee build.log || {
-          echo "Build failed! Showing last 50 lines of output:"
-          tail -50 build.log
-          exit 1
-        }
+        # Build the book with verbose output
+        jupyter-book build . --verbose
 
         # Copy nojekyll file
         cp .nojekyll _build/html/
