--- a/_toc.yml
+++ b/_toc.yml
@@ -80,7 +80,7 @@ chapters:
     
 - file: content/hints-jetting/index
   title: Hints & Jetting
-  sections:
+  # sections:
   # - file: content/hints-jetting/algorithmic-considerations
   #   title: Algorithmic Considerations
 
