Change copyright for 2026.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Nock
 author: Urbit Systems Technical Journal
 logo: logo.png
-copyright: "2025"
+copyright: "2025–2026"
 
 # Force re-execution of notebooks on each build
 execute:
